End of day update sync
Partial transitioning of the visual/audio events from the main game area to a separate game controls object. (which is what outside entities will use to interact with the game)

--- a/06-advanced-front-end-development-projects/simon-game/main.css
+++ b/06-advanced-front-end-development-projects/simon-game/main.css
@@ -36,9 +36,6 @@
    background: green;
 }
 
-.blink-on {
-   visibility: hidden;
-}
 
 
 .win {
@@ -73,4 +70,7 @@ button:active {
 
 .power-on #strict-mode:checked {
    outline: 2px solid red;
+}
+.power-on .blink-on {
+   visibility: hidden;
 }
