--- a/06-advanced-front-end-development-projects/simon-game/main.css
+++ b/06-advanced-front-end-development-projects/simon-game/main.css
@@ -6,71 +6,25 @@
    padding: 50px;
    display: block;
 }
-
-
-.simon > button {
-   opacity: 0.1;
-}
-
+.simon > button { opacity: 0.1; }
 #red {background: red;}
 #green {background: green;}
 #yellow {background: yellow;}
 #blue {background: blue;}
-
-.simon > .active {
-   opacity: 1;
-}
-
-/* .simon > button:disabled {
-   border: 10px solid gray;
-} */
-
-.power-off {
-   background: rgba(200, 50, 50, 0.2);
-}
-
-.wrong {
-   background: red;
-}
-.repeat {
-   background: green;
-}
-
-
-
-.win {
-   color: green;
-}
-
+.simon > .active { opacity: 1; }
+.power-off { background: rgba(200, 50, 50, 0.2); }
+.wrong { background: red; }
+.repeat { background: green; }
+.win { color: green; }
 .player-input .option-btn {
    cursor: pointer;
    outline: 2px solid red;
 }
-
-button:active {
-   background: red;
-}
-
-.check-difficulty:checked {
-   outline: solid red 2px;
-}
-
-.power-on {
-   background: rgba(200, 50, 50, 0.05);
-}
-.level {
-   visibility: hidden;
-}
-.power-on .level {
-   visibility: visible;
-}
-.power-on .check-difficulty:checked {
-   width: 30px;
-}
-
-.power-on #strict-mode:checked {
-   outline: 2px solid red;
-}
-.power-on .blink-on {
-   visibility: hidden;
-}
+button:active { background: red; }
+.check-difficulty:checked { outline: solid red 2px; }
+.power-on { background: rgba(200, 50, 50, 0.05); }
+.level { visibility: hidden; }
+.power-on .level { visibility: visible;}
+.power-on .check-difficulty:checked { width: 30px; }
+.power-on #strict-mode:checked { outline: 2px solid red;}
+.power-on .blink-on { visibility: hidden;}
