--- a/06-advanced-front-end-projects/tic-tac-toe/css/main.css
+++ b/06-advanced-front-end-projects/tic-tac-toe/css/main.css
@@ -1,8 +1,17 @@
 .hide {
    display: none;
 }
+.invisible {
+   visibility: hidden;
+}
 
+body:not([data-active-player='']) td[data-value] {
+   cursor: pointer;
+}
 
+.current-active-player {
+   background: yellow;
+}
 
 body[data-active-player='x'] td[data-value='']:hover > div {
    opacity: 0.2;
@@ -13,15 +22,15 @@ body[data-active-player='o'] td[data-value='']:hover > div {
 }
 
 td > div {
-   width: 100px;
-   height: 100px;
+   width: 200px;
+   height: 200px;
    border: 1px;
    position: relative;
    border: 1px solid black;
 }
 
 table {
-   width: 300px;
+   margin: 0 auto;
 }
 
 /* td[data-value="x"] { background: red; } */
@@ -32,7 +41,7 @@ td[data-value="o"] > div:after, body[data-active-player='o'] td[data-value=''] >
    right: 20px;
    top: 20px;
    bottom: 20px;
-   border: 10px solid black;
+   border: 1em solid black;
    border-radius: 50%;
    
 }
@@ -50,7 +59,7 @@ td[data-value="x"] > div:before {
 td[data-value="x"] > div:after, body[data-active-player='x'] td[data-value='']:hover >  div:after {
    content: '';
    position: absolute;
-   height: 10px;
+   height: 1.2em;
    left: 10px;
    right: 10px;
    background: blue;
@@ -62,7 +71,7 @@ td[data-value="x"] > div:after, body[data-active-player='x'] td[data-value='']:h
 td[data-value="x"] > div:before, body[data-active-player='x'] td[data-value='']:hover > div:before {
    content: '';
    position: absolute;
-   height: 10px;
+   height: 1.2em;
    left: 10px;
    right: 10px;
    background: blue;
